MaterialStatus: fix border-radius on small screen sizes

--- a/app/styles/components/columns.scss
+++ b/app/styles/components/columns.scss
@@ -351,6 +351,10 @@
 
   @media screen and (max-width: 580px) {
     border-radius: 0;
+
+    .material-status__status {
+      border-radius: 0;
+    }
   }
 }
 
